# raspicat_description

./: CHANGELOG.rst  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  package.xml
launch/: display.launch.py  display_urdf.launch  display_xacro.launch  load_robot_description.launch
launch/config/: urdf.rviz
meshes/dae/caster/: raspicat_caster.dae  raspicat_caster_wheel.dae
meshes/dae/wheel/: raspicat_wheel.dae
robots/: raspicat.urdf.xacro
rviz/: urdf.rviz
urdf/: common.xacro  raspicat.urdf  raspicat.urdf.xacro
urdf/body/: body.gazebo.xacro  body.urdf.xacro
urdf/caster/: caster.gazebo.xacro  caster.urdf.xacro
urdf/sensors/: imu.gazebo.xacro  imu.urdf.xacro  lidar.gazebo.xacro  lidar.urdf.xacro  realsense_d435.gazebo.xacro  realsense_d435.urdf.xacro  ultrasonicsens.gazebo.xacro  ultrasonicsens.urdf.xacro
urdf/wheel/: wheel.gazebo.xacro  wheel.urdf.xacro
